[build-system]
requires = ["setuptools >=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "financialpydate"
version = "0.0.3"

authors = [
    { name = "Pedro Henrique Rezende Oliveira", email = "pedro-henrique.rezende@solvaypostgrad.net" },
]
maintainers = [
    { name = "Pedro Henrique Rezende Oliveira", email = "pedro-henrique.rezende@solvaypostgrad.net" },
]
description = "Project with financial dates and generate cashflows schedules"
readme = "README.md"
keywords = ["finance", "date", "schedules", "cashflows", "payment"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "numpy >= 1.26",
  "numba == 0.59.1",
]

[project.optional-dependencies]
testing = [
    "QuantLib",
    "pytest",
    "mypy",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = [
    ".", "financialpydate", "test"
]

[project.urls]
Source = "https://github.com/OliveiraPedro02/financialpydate"

[tool.setuptools.packages.find]
include = ["financialpydate"]
exclude = ["financialpydate.update_files*"]

[tool.setuptools.package-data]
"financialpydate" = ["py.typed"]

[tool.ruff]
line-length = 120
src = ["financialpydate", "test", "."]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py"
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"