[build-system]
requires = ["setuptools >=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "financialpydate"
version = "0.0.4"

authors = [
    { name = "Pedro Henrique Rezende Oliveira", email = "pedro-henrique.rezende@solvaypostgrad.net" },
]
maintainers = [
    { name = "Pedro Henrique Rezende Oliveira", email = "pedro-henrique.rezende@solvaypostgrad.net" },
]
description = "Project with financial dates and generate cashflows schedules"
readme = "README.md"
keywords = ["finance", "date", "schedules", "cashflows", "payment"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "numba>=0.64.0",
  "numpy >= 2.3.0",
]
[tool.pytest.ini_options]
pythonpath = [
    ".", "financialpydate", "test"
]

[project.urls]
Source = "https://github.com/OliveiraPedro02/financialpydate"

[tool.setuptools.packages.find]
include = ["financialpydate"]
exclude = ["financialpydate.update_files*"]

[tool.setuptools.package-data]
"financialpydate" = ["py.typed"]

[tool.ruff]
line-length = 120
src = ["financialpydate", "test", "."]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py"
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-codspeed>=4.3.0",
    "quantlib>=1.41",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.ty.src]
include = ["financialpydate", "test"]
exclude = ["financialpydate/calendars", "financialpydate/update_files"]

[tool.ty.rules]
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
